# medical_ai_pipeline

./: .flake8  README.md  pyproject.toml  run_web_app.sh  web_app.Dockerfile
.github/workflows/: ci.yml
database/llama_index_storage/: default__vector_store.json  docstore.json  index_store.json
database/mock_nosql_db/cpt_guidelines/: 45378.json
database/vector_db/medical-record-1/: default__vector_store.json  docstore.json  index_store.json
database/vector_db/medical-record-2/: default__vector_store.json  docstore.json  index_store.json
database/vector_db/medical-record-3/: default__vector_store.json  docstore.json  index_store.json
src/: env.py  main.py
src/data_models/: cpt_guideline.py  pre_authorization.py
src/db_models/: cpt_guidelines.py
src/pipelines/: exceptions.py
src/pipelines/cpt_guideline_ingestion/: __init__.py  pipeline.py
src/pipelines/cpt_guideline_ingestion/pipeline_steps/: __init__.py  create_guideline_decision_tree.py  parse_guidelines_from_pdf.py
src/pipelines/pre_authorization/: pipeline.py
src/pipelines/pre_authorization/pipeline_steps/: __init__.py  are_cpt_guideline_criteria_met.py  create_cpt_guidelines_decision_tree.py  extract_prior_treatment_information.py  extract_requested_cpt_codes.py  index_medical_record.py  parse_cpt_guidelines_from_pdf.py
src/services/: db.py  storage.py
src/utils/: prompt_utils.py  pydantic_utils.py
src/web_app/: main.py
src/web_app/routes/: __init__.py
src/web_app/routes/api/: __init__.py  guidelines_ingest.py  (+3 more)
tests/: test_dummy.py
tests/test_utils/: test_prompt_utils.py
