[tool.poetry]
name = "medical_ai_pipeline"
version = "0.0.1"
description = "A LLM-powered pipeline to automate the Prior Authorization checks carried out by US healthcare insurers."
authors = ["Luka Smyth"]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic-settings = "^2.1.0"
llama-index = "^0.9.37.post1"
pypdf = "^4.0.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
